# antbattle

./: AntBattleServer.prj  AntBattleServer.pws  Makefile  Makefile.am  Makefile.in  ProjectHome.md  Welcome.md  config.status
clients/: README.txt
clients/brains/: BrainRandom.rb  BrainStraight.rb  BrainStraight_0.1.rb  main.rb
clients/gui/: AntClient.rb  GLUtils.rb  Map.rb  ReleaseNotes.txt  TCPClient.rb  gui.bat  tgc.rb
clients/launcher/: gui.glade  gui.rb  gui_client.rb  launcher.rb  main.rb  readme.txt
clients/lib/: AntClient.rb  Colony.rb  Map.rb  Pathfinding.rb  TCPClient.rb  Utils.rb  guitk.rb
cppgui/: AntTCPClient.cpp  AntTCPClient.h
cppgui/borland/: Board.h  main.h
include/: AntClient.h  AntServer.h  MTree.cpp  MTree.h  Makefile  Makefile.am  Makefile.in  Stats.h
launcher/: gui.rb  main.rb
server/: AntBattleServer.prj  AntBattleServer.pws  Makefile.in  aclocal.m4  configure  configure.in
server/borland/: AntBattleServer.bpr  config.ini  map1.txt  map2.txt
server/include/: AntServer.h  MMap.h  MMapObject.h  MPNLBase.h  MStats.h  MThread.h  (+1 more)
src/: AntClient.cpp  MUtils.cpp  Makefile.am  Makefile.in  NetMsgUtils.cpp  Stats.cpp  VariantsPlus.h  main.cpp
trunk/: AntBattleServer.prj  Makefile  aclocal.m4  config.h  configure  libtool
trunk/server/include/: AntClient.h  AntServer.h  HTTPServer.h  MMap.h  MMapObject.h  MUtils.h  Makefile.am  Makefile.in  Msg.h  NetMsgUtils.h
trunk/server/src/: AntClient.cpp  AntServer.cpp  HTTPServer.cpp  MMap.cpp  MMapObject.cpp  MPNLBase.cpp  MStats.cpp  Makefile.am  Makefile.in  main.cpp
wiki/: Welcome.wiki
(+83 files in other folders)
