## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

antbattleserver_includedir = $(pkgincludedir)

antbattleserver_include_DATA = \
	AntClient.h\
	AntServer.h\
	HTTPServer.h\
	MMap.h\
	MMapObject.h\
	Msg.h\
	MStats.h\
	MPNLBase.h\
	NetMsgUtils.h\
	MThread.h\
	MUtils.h

EXTRA_DIST = $(antbattleserver_include_DATA)
